crates/ty_python_semantic/resources/mdtest/snapshots/tuples.md_-_Comparison___Tuples_-_Equality_with_elemen…_(39b614d4707c0661).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: tuples.md - Comparison: Tuples - Equality with elements that incorrectly implement `__bool__`
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/tuples.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NotBoolable:
 2 |     __bool__: None = None
 3 | 
 4 | class A:
 5 |     # error: [invalid-method-override]
 6 |     def __eq__(self, other) -> NotBoolable:
 7 |         return NotBoolable()
 8 | 
 9 | # error: [unsupported-bool-conversion]
10 | (A(),) == (A(),)
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `__eq__`
   --> src/mdtest_snippet.py:6:9
    |
  6 |     def __eq__(self, other) -> NotBoolable:
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `object.__eq__`
    |
   ::: stdlib/builtins.pyi:142:9
    |
142 |     def __eq__(self, value: object, /) -> bool: ...
    |         -------------------------------------- `object.__eq__` defined here
    |
info: This violates the Liskov Substitution Principle
help: It is recommended for `__eq__` to work with arbitrary objects, for example:
help
help:     def __eq__(self, other: object) -> bool:
help:         if not isinstance(other, A):
help:             return False
help:         return <logic to compare two `A` instances>
help

```

```
error[unsupported-bool-conversion]: Boolean conversion is not supported for type `NotBoolable`
  --> src/mdtest_snippet.py:10:1
   |
10 | (A(),) == (A(),)
   | ^^^^^^^^^^^^^^^^
   |
info: `__bool__` on `NotBoolable` must be callable

```
